Update fmt.Println to print 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>歐米伽訓練遊戲（V9.6 — 挑戰模式）</title>
+<title>歐米伽訓練遊戲（V9.7 ）</title>
 <style>
   body{font-family:Arial,Helvetica,sans-serif;background:#f5f6fa;color:#222;margin:0;padding:20px;text-align:center}
   .container{max-width:760px;margin:0 auto;background:#fff;padding:20px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,.06)}
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>歐米伽訓練遊戲（V9.6 挑戰模式）</h1>
+  <h1>歐米伽訓練遊戲（V9.7)</h1>
   <p class="lead">每輪 5 題 • 點擊 A 或 B 按鈕答題 • **5 題全對才算通過一輪**</p>
 
   <div id="questionBox">
@@ -394,3 +394,4 @@ initializeGame();
 </script>
 </body>
 </html>
+
