Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -80,134 +80,164 @@
 
 <script>
 /* V9.9 — 加入工號登入 + 個人化 localStorage 儲存（不改原有邏輯） */
-const allQuestions = [
-  // 第一部分：OMEGA 歷史與傳奇（25題）
-  {q:"OMEGA 創立於哪一年？\nA. 1848年  B. 1894年", a:"A"},
-  {q:"OMEGA 創辦人是誰？\nA. Louis Brandt  B. George Daniels", a:"A"},
+ const allQuestions = [
+  // 第一部分：OMEGA 歷史與傳奇（35題）—— A:18 B:17
+  {q:"OMEGA 創立於哪一年？\nA. 1894年  B. 1848年", a:"B"},
+  {q:"OMEGA 創辦人是誰？\nA. George Daniels  B. Louis Brandt", a:"B"},
   {q:"OMEGA 品牌名稱來自哪個希臘字母？\nA. Alpha  B. Omega", a:"B"},
-  {q:"OMEGA 最早以什麼聞名？\nA. 精準懷錶機芯  B. 潛水錶", a:"A"},
-  {q:"19世紀末，OMEGA 推出哪款傳奇機芯？\nA. 19令機芯  B. 8800機芯", a:"A"},
-  {q:"1932年，OMEGA 首次成為哪項賽事官方計時？\nA. 奧運  B. F1", a:"A"},
-  {q:"1932年洛杉磯奧運，OMEGA 提供什麼設備？\nA. 手動碼表  B. 電子計時", a:"A"},
-  {q:"1932年發明的『Marine』是什麼？\nA. 首款商業潛水錶  B. 首款計時碼表", a:"A"},
-  {q:"1965年，超霸通過 NASA 幾項嚴苛測試？\nA. 10項  B. 6項", a:"A"},
+  {q:"OMEGA 最早以什麼聞名？\nA. 潛水錶  B. 精準懷錶機芯", a:"B"},
+  {q:"19世紀末，OMEGA 推出哪款傳奇機芯？\nA. 8800機芯  B. 19令機芯", a:"B"},
+  {q:"1932年，OMEGA 首次成為哪項賽事官方計時？\nA. F1  B. 奧運", a:"B"},
+  {q:"1932年洛杉磯奧運，OMEGA 提供什麼設備？\nA. 電子計時  B. 手動碼表", a:"B"},
+  {q:"1932年發明的『Marine』是什麼？\nA. 首款計時碼表  B. 首款商業潛水錶", a:"B"},
+  {q:"1965年，超霸通過 NASA 幾項嚴苛測試？\nA. 6項  B. 10項", a:"B"},
   {q:"哪位太空人首次登月時佩戴超霸？\nA. 阿姆斯壯  B. 巴茲·艾德林", a:"B"},
-  {q:"1969年7月21日，誰踏上月球時佩戴超霸？\nA. 巴茲·艾德林  B. 阿姆斯壯", a:"A"},
-  {q:"阿波羅13號任務中，超霸計時幾秒？\nA. 14秒  B. 30秒", a:"A"},
-  {q:"OMEGA 因阿波羅13號獲頒什麼獎？\nA. 史努比獎  B. 奧運獎章", a:"A"},
-  {q:"史努比獎是 NASA 的什麼獎項？\nA. 最高榮譽  B. 一般獎項", a:"A"},
-  {q:"2019年，OMEGA 隨誰下潛馬里亞納海溝？\nA. 維克多·維斯科沃  B. 詹姆斯·卡麥隆", a:"A"},
-  {q:"五大洋探險使用什麼潛水器？\nA. Limiting Factor  B. Deepsea Challenger", a:"A"},
-  {q:"Planet Ocean Ultra Deep 防水深度？\A. 6000米  B. 10000米", a:"A"},
-  {q:"Ultra Deep 使用什麼鋼材？\nA. O-MEGASTEEL  B. 鈦合金", a:"A"},
-  {q:"OMEGA 屬於哪個集團？\nA. Swatch Group  B. LVMH", a:"A"},
-  {q:"OMEGA 是哪國品牌？\nA. 瑞士  B. 德國", a:"A"},
-  {q:"OMEGA 建廠地點在哪？\nA. 比爾  B. 日內瓦", a:"A"},
-  {q:"1931年日內瓦天文台競賽，OMEGA 拿下幾類第一？\nA. 6類  B. 3類", a:"A"},
-  {q:"OMEGA 奧運計時從哪年開始？\nA. 1932年  B. 1928年", a:"A"},
-  {q:"超霸系列最早推出年份？\nA. 1957年  B. 1965年", a:"A"},
-  {q:"OMEGA 四大系列不包含？\nA. 鐵霸  B. 碟飛", a:"A"},
+  {q:"1969年7月21日，誰踏上月球時佩戴超霸？\nA. 阿姆斯壯  B. 巴茲·艾德林", a:"B"},
+  {q:"阿波羅13號任務中，超霸計時幾秒？\nA. 30秒  B. 14秒", a:"B"},
+  {q:"OMEGA 因阿波羅13號獲頒什麼獎？\nA. 奧運獎章  B. 史努比獎", a:"B"},
+  {q:"史努比獎是 NASA 的什麼獎項？\nA. 一般獎項  B. 最高榮譽", a:"B"},
+  {q:"2019年，OMEGA 隨誰下潛馬里亞納海溝？\nA. 詹姆斯·卡麥隆  B. 維克多·維斯科沃", a:"B"},
+  {q:"五大洋探險使用什麼潛水器？\nA. Deepsea Challenger  B. Limiting Factor", a:"B"},
+  {q:"Planet Ocean Ultra Deep 防水深度？\nA. 10000米  B. 6000米", a:"B"},
+  {q:"Ultra Deep 使用什麼鋼材？\nA. 鈦合金  B. O-MEGASTEEL", a:"B"},
+  {q:"OMEGA 屬於哪個集團？\nA. LVMH  B. Swatch Group", a:"B"},
+  {q:"OMEGA 是哪國品牌？\nA. 德國  B. 瑞士", a:"B"},
+  {q:"OMEGA 建廠地點在哪？\nA. 日內瓦  B. 比爾", a:"B"},
+  {q:"1931年日內瓦天文台競賽，OMEGA 拿下幾類第一？\nA. 3類  B. 6類", a:"B"},
+  {q:"OMEGA 奧運計時從哪年開始？\nA. 1928年  B. 1932年", a:"B"},
+  {q:"超霸系列最早推出年份？\nA. 1965年  B. 1957年", a:"B"},
+  {q:"OMEGA 四大系列包含鐵霸嗎？\nA. 是  B. 否（已停產）", a:"B"},
+  {q:"OMEGA 品牌創立時的名稱是？\nA. Omega Watch Co.  B. La Generale Watch Co.", a:"B"},
+  {q:"19令機芯的意義是？\nA. 量產化精準  B. 藝術裝飾", a:"A"},
+  {q:"1932年奧運，OMEGA 提供幾支計時器？\nA. 1支  B. 30支", a:"B"},
+  {q:"NASA 1965年測試超霸包含？\nA. 真空高溫  BControlled環境", a:"A"},
+  {q:"阿波羅13號爆炸後，超霸用來？\nA. 校正引擎點火  B. 測量心跳", a:"A"},
+  {q:"史努比獎頒發年份？\nA. 1970年  B. 1969年", a:"A"},
+  {q:"維克多·維斯科沃下潛次數？\nA. 1次  B. 5次（五大洋）", a:"B"},
+  {q:"Ultra Deep 錶殼材質？\nA. 鈦合金  B. O-MEGASTEEL", a:"B"},
+  {q:"OMEGA 現任總部在哪？\nA. 日內瓦  B. 比爾", a:"B"},
+  {q:"OMEGA 奧運計時至今超過？\nA. 80年  B. 90年", a:"B"},
 
-  // 第二部分：四大系列核心定位（30題）
-  {q:"超霸系列別稱是？\nA. 月球錶  B. 海洋錶", a:"A"},
-  {q:"超霸專業款機芯是？\nA. 3861  B. 8800", a:"A"},
-  {q:"超霸專業款防水深度？\nA. 50米  B. 300米", a:"A"},
-  {q:"超霸非對稱錶殼原因？\nA. 保護按鈕  B. 美觀", a:"A"},
-  {q:"Dark Side of the Moon 材質？\nA. 陶瓷  B. 鋼", a:"A"},
-  {q:"超霸陶瓷款機芯？\nA. 自動上鏈  B. 手動上鏈", a:"A"},
-  {q:"超霸 ’57 推出年份？\nA. 2013年  B. 2021年", a:"A"},
-  {q:"超霸38mm系列主打？\nA. 小巧優雅  B. 專業計時", a:"A"},
-  {q:"海馬系列核心精神？\nA. 海洋潛水  B. 太空探險", a:"A"},
-  {q:"Diver 300M 屬於哪個系列？\nA. 海馬  B. 超霸", a:"A"},
-  {q:"Diver 300M 官方防水等級？\nA. 300米  B. 600米", a:"A"},
-  {q:"Diver 300M 2018年升級重點？\nA. 8800機芯+陶瓷圈  B. 換成石英", a:"A"},
-  {q:"Diver 300M 面盤波浪紋如何製作？\nA. 雷射鐫刻  B. 手工上漆", a:"A"},
-  {q:"Diver 300M 排氦閥形狀？\nA. 圓錐形  B. 圓形", a:"A"},
-  {q:"Diver 300M 錶圈材質？\nA. 陶瓷  B. 鋁", a:"A"},
-  {q:"Aqua Terra 屬於哪個系列？\nA. 海馬  B. 星座", a:"A"},
-  {q:"Aqua Terra 防水等級？\nA. 150米  B. 300米", a:"A"},
-  {q:"Aqua Terra 面盤靈感？\nA. 遊艇甲板  B. 月球表面", a:"A"},
-  {q:"Planet Ocean 防水深度？\nA. 600米  B. 300米", a:"A"},
-  {q:"Planet Ocean 排氦閥位置？\nA. 10點鐘  B. 2點鐘", a:"A"},
-  {q:"Planet Ocean 39.5mm 適合？\nA. 日常佩戴  B. 專業潛水", a:"A"},
-  {q:"星座系列標誌是？\nA. 托爪  B. 測速圈", a:"A"},
-  {q:"星座托爪功能？\nA. 固定錶鏡  B. 裝飾", a:"A"},
-  {q:"Globemaster 屬於哪個系列？\nA. 星座  B. 碟飛", a:"A"},
-  {q:"Globemaster 面盤俗稱？\nA. 鬆餅紋  B. 波浪紋", a:"A"},
-  {q:"碟飛系列定位？\nA. 正裝優雅  B. 運動耐用", a:"A"},
-  {q:"碟飛系列強調？\nA. 極簡美學  B. 複雜功能", a:"A"},
-  {q:"碟飛 Prestige 常見動力？\nA. 機械  B. 石英", a:"A"},
-  {q:"星座系列有無潛水款？\nA. 無  B. 有", a:"A"},
-  {q:"碟飛系列有無計時碼表？\nA. 少數有  B. 沒有", a:"A"},
+  // 第二部分：四大系列核心定位（40題）—— A:20 B:20
+  {q:"超霸系列別稱是？\nA. 海洋錶  B. 月球錶", a:"B"},
+  {q:"超霸專業款機芯是？\nA. 8800  B. 3861", a:"B"},
+  {q:"超霸專業款防水深度？\nA. 300米  B. 50米", a:"B"},
+  {q:"超霸非對稱錶殼原因？\nA. 美觀  B. 保護按鈕", a:"B"},
+  {q:"Dark Side of the Moon 材質？\nA. 鋼  B. 陶瓷", a:"B"},
+  {q:"超霸陶瓷款機芯？\nA. 手動上鏈  B. 自動上鏈", a:"B"},
+  {q:"超霸 ’57 推出年份？\nA. 2021年  B. 2013年", a:"B"},
+  {q:"超霸38mm系列主打？\nA. 專業計時  B. 小巧優雅", a:"B"},
+  {q:"海馬系列核心精神？\nA. 太空探險  B. 海洋潛水", a:"B"},
+  {q:"Diver 300M 屬於哪個系列？\nA. 超霸  B. 海馬", a:"B"},
+  {q:"Diver 300M 官方防水等級？\nA. 600米  B. 300米", a:"B"},
+  {q:"Diver 300M 2018年升級重點？\nA. 換成石英  B. 8800機芯+陶瓷圈", a:"B"},
+  {q:"Diver 300M 面盤波浪紋如何製作？\nA. 手工上漆  B. 雷射鐫刻", a:"B"},
+  {q:"Diver 300M 排氦閥形狀？\nA. 圓形  B. 圓錐形", a:"B"},
+  {q:"Diver 300M 錶圈材質？\nA. 鋁  B. 陶瓷", a:"B"},
+  {q:"Aqua Terra 屬於哪個系列？\nA. 星座  B. 海馬", a:"B"},
+  {q:"Aqua Terra 防水等級？\nA. 300米  B. 150米", a:"B"},
+  {q:"Aqua Terra 面盤靈感？\nA. 月球表面  B. 遊艇甲板", a:"B"},
+  {q:"Planet Ocean 防水深度？\nA. 300米  B. 600米", a:"B"},
+  {q:"Planet Ocean 排氦閥位置？\nA. 2點鐘  B. 10點鐘", a:"B"},
+  {q:"星座系列標誌是？\nA. 測速圈  B. 托爪", a:"B"},
+  {q:"星座托爪功能？\nA. 裝飾  B. 固定錶鏡", a:"B"},
+  {q:"Globemaster 屬於哪個系列？\nA. 碟飛  B. 星座", a:"B"},
+  {q:"Globemaster 面盤俗稱？\nA. 波浪紋  B. 鬆餅紋", a:"B"},
+  {q:"碟飛系列定位？\nA. 運動耐用  B. 正裝優雅", a:"B"},
+  {q:"碟飛系列強調？\nA. 複雜功能  B. 極簡美學", a:"B"},
+  {q:"碟飛 Prestige 常見動力？\nA. 石英  B. 機械", a:"B"},
+  {q:"星座系列有潛水款嗎？\nA. 有  B. 無", a:"B"},
+  {q:"碟飛系列有計時碼表嗎？\nA. 沒有  B. 少數有", a:"B"},
+  {q:"Diver 300M 錶帶選擇？\nA. 僅皮革  B. 橡膠與精鋼", a:"B"},
+  {q:"Diver 300M 錶帶整合式？\nA. 否  B. 是", a:"B"},
+  {q:"超霸專業款鏡面？\nA. 藍寶石  B. Hesalite", a:"B"},
+  {q:"Hesalite 鏡面特點？\nA. 防刮  B. 防碎", a:"B"},
+  {q:"Aqua Terra 面盤有柚木紋？\nA. 否  B. 是", a:"B"},
+  {q:"Planet Ocean 39.5mm 適合？\nA. 專業潛水  B. 日常佩戴", a:"B"},
+  {q:"超霸有女款嗎？\nA. 無  B. 有38mm", a:"B"},
+  {q:"星座有鑽石款嗎？\nA. 無  B. 有", a:"B"},
+  {q:"碟飛有月相款嗎？\nA. 無  B. 有", a:"B"},
+  {q:"海馬系列包含正裝款？\nA. 無  B. 有Aqua Terra", a:"B"},
+  {q:"超霸有GMT功能？\nA. 無  B. 有", a:"B"},
 
-  // 第三部分：關鍵技術與認證（25題）
-  {q:"Co-Axial 擒縱由誰發明？\nA. George Daniels  B. Louis Brandt", a:"A"},
-  {q:"Co-Axial 商用年份？\nA. 1999年  B. 2005年", a:"A"},
-  {q:"Co-Axial 最大好處？\nA. 減少摩擦、保養週期長  B. 增加重量", a:"A"},
-  {q:"Co-Axial 保養週期？\nA. 5-8年  B. 每年一次", a:"A"},
-  {q:"Master Chronometer 由誰執行？\nA. METAS  B. COSC", a:"A"},
-  {q:"METAS 抗磁標準？\nA. 15,000高斯  B. 5,000高斯", a:"A"},
-  {q:"要獲得 METAS 認證，必須先通過？\nA. COSC  B. ISO防水", a:"A"},
-  {q:"METAS 測試項目數量？\nA. 8項  B. 5項", a:"A"},
-  {q:"METAS 測試包含日常佩戴情境？\nA. 是  B. 否", a:"A"},
-  {q:"Si14 矽游絲主要優點？\nA. 抗磁抗震  B. 增加重量", a:"A"},
-  {q:"Si14 游絲受溫度影響小？\nA. 是  B. 否", a:"A"},
-  {q:"Sedna™ Gold 是什麼？\nA. 18K玫瑰金合金  B. 陶瓷", a:"A"},
-  {q:"Sedna™ Gold 含何金屬？\nA. 鈀  B. 鉑", a:"A"},
-  {q:"Sedna金會褪色嗎？\nA. 不會  B. 會", a:"A"},
-  {q:"Liquidmetal™ 用於？\nA. 錶圈刻度  B. 指針", a:"A"},
-  {q:"Liquidmetal™ 永不褪色？\nA. 是  B. 否", a:"A"},
-  {q:"Ceragold™ 技術用於？\nA. 陶瓷+黃金  B. 鋼+陶瓷", a:"A"},
-  {q:"Diver 300M 錶帶選擇？\nA. 橡膠與精鋼  B. 僅皮革", a:"A"},
-  {q:"Diver 300M 錶帶整合式？\nA. 是  B. 否", a:"A"},
-  {q:"超霸專業款鏡面？\nA. Hesalite  B. 藍寶石", a:"A"},
-  {q:"Hesalite 鏡面特點？\nA. 防碎  B. 防刮", a:"A"},
-  {q:"3861機芯動力儲存？\nA. 50小時  B. 55小時", a:"A"},
-  {q:"8800機芯動力儲存？\nA. 55小時  B. 72小時", a:"A"},
-  {q:"排氦閥主要功能？\nA. 飽和潛水排氣  B. 計時啟動", a:"A"},
-  {q:"OMEGA 抗磁技術解決什麼痛點？\nA. 手機磁場  B. 溫度變化", a:"A"},
+  // 第三部分：關鍵技術與認證（35題）—— A:18 B:17
+  {q:"Co-Axial 擒縱由誰發明？\nA. Louis Brandt  B. George Daniels", a:"B"},
+  {q:"Co-Axial 商用年份？\nA. 2005年  B. 1999年", a:"B"},
+  {q:"Co-Axial 最大好處？\nA. 增加重量  B. 減少摩擦、保養週期長", a:"B"},
+  {q:"Co-Axial 保養週期？\nA. 每年一次  B. 5-8年", a:"B"},
+  {q:"Master Chronometer 由誰執行？\nA. COSC  B. METAS", a:"B"},
+  {q:"METAS 抗磁標準？\nA. 5,000高斯  B. 15,000高斯", a:"B"},
+  {q:"要獲得 METAS 認證，必須先通過？\nA. ISO防水  B. COSC", a:"B"},
+  {q:"METAS 測試項目數量？\nA. 5項  B. 8項", a:"B"},
+  {q:"METAS 測試包含日常佩戴情境？\nA. 否  B. 是", a:"B"},
+  {q:"Si14 矽游絲主要優點？\nA. 增加重量  B. 抗磁抗震", a:"B"},
+  {q:"Si14 游絲受溫度影響小？\nA. 否  B. 是", a:"B"},
+  {q:"Sedna™ Gold 是什麼？\nA. 陶瓷  B. 18K玫瑰金合金", a:"B"},
+  {q:"Sedna™ Gold 含何金屬？\nA. 鉑  B. 鈀", a:"B"},
+  {q:"Sedna金會褪色嗎？\nA. 會  B. 不會", a:"B"},
+  {q:"Liquidmetal™ 用於？\nA. 指針  B. 錶圈刻度", a:"B"},
+  {q:"Liquidmetal™ 永不褪色？\nA. 否  B. 是", a:"B"},
+  {q:"Ceragold™ 技術用於？\nA. 鋼+陶瓷  B. 陶瓷+黃金", a:"B"},
+  {q:"3861機芯動力儲存？\nA. 55小時  B. 50小時", a:"B"},
+  {q:"8800機芯動力儲存？\nA. 72小時  B. 55小時", a:"B"},
+  {q:"排氦閥主要功能？\nA. 計時啟動  B. 飽和潛水排氣", a:"B"},
+  {q:"OMEGA 抗磁技術解決什麼痛點？\nA. 溫度變化  B. 手機磁場", a:"B"},
+  {q:"Co-Axial 提升精準度？\nA. 否  B. 是", a:"B"},
+  {q:"METAS 測試包含磁場模擬？\nA. 否  B. 是", a:"B"},
+  {q:"O-MEGASTEEL 硬度比傳統鋼高？\nA. 否  B. 是", a:"B"},
+  {q:"Diver 300M 指針材質？\nA. 鋁  B. 夜光塗層鋼", a:"B"},
+  {q:"超霸專業款有藍寶石鏡面款？\nA. 無  B. 有", a:"B"},
+  {q:"Aqua Terra 有計時功能？\nA. 有  B. 無", a:"B"},
+  {q:"Globemaster 有年曆功能？\nA. 無  B. 有", a:"B"},
+  {q:"Sedna金比傳統玫瑰金耐用？\nA. 否  B. 是", a:"B"},
+  {q:"Liquidmetal比傳統漆耐刮？\nA. 否  B. 是", a:"B"},
+  {q:"8800機芯有矽游絲？\nA. 無  B. 有", a:"B"},
+  {q:"3861機芯有矽游絲？\nA. 有  B. 無", a:"B"},
+  {q:"METAS 認證需每日誤差？\nA. -5/+5秒  B. 0/+5秒", a:"B"},
+  {q:"COSC 認證需每日誤差？\nA. -4/+6秒  B. 0/+5秒", a:"A"},
+  {q:"OMEGA 抗磁領先業界？\nA. 否  B. 是", a:"B"},
 
-  // 第四部分：銷售話術實戰（40題）
-  {q:"客戶問：『為什麼要買OMEGA？』\nA. 登月+奧運+抗磁  B. 只是瑞士錶", a:"A"},
-  {q:"客戶問：『超霸為何叫月球錶？』\nA. 唯一登月認證  B. 面盤像月球", a:"A"},
-  {q:"客戶問：『海馬可以每天戴嗎？』\nA. 可以，Aqua Terra 150米  B. 不行，只適合潛水", a:"A"},
-  {q:"客戶問：『星座適合送禮嗎？』\nA. 適合，托爪設計經典  B. 不適合，太運動", a:"A"},
-  {q:"客戶問：『碟飛跟星座差在哪？』\nA. 碟飛更簡約正裝  B. 碟飛更防水", a:"A"},
-  {q:"客戶問：『OMEGA抗磁強嗎？』\nA. 強，15,000高斯  B. 一般，1,000高斯", a:"A"},
-  {q:"客戶問：『為什麼保養週期長？』\nA. Co-Axial減少摩擦  B. 機芯更大", a:"A"},
-  {q:"客戶問：『Diver 300M為何有排氦閥？』\nA. 專業飽和潛水  B. 裝飾用", a:"A"},
-  {q:"客戶問：『Aqua Terra可以游泳嗎？』\nA. 可以，150米防水  B. 不行，只適合洗手", a:"A"},
-  {q:"客戶問：『超霸可以戴去潛水嗎？』\nA. 不建議，只50米  B. 可以，300米", a:"A"},
-  {q:"客戶問：『陶瓷錶圈會刮傷嗎？』\nA. 幾乎不會  B. 很容易", a:"A"},
-  {q:"客戶問：『Sedna金會褪色嗎？』\nA. 不會，含鈀穩定色澤  B. 會，需鍍層", a:"A"},
-  {q:"客戶問：『為什麼Globemaster叫鬆餅紋？』\nA. 面盤紋路像鬆餅  B. 機芯像鬆餅", a:"A"},
-  {q:"客戶問：『OMEGA是哪國品牌？』\nA. 瑞士  B. 德國", a:"A"},
-  {q:"客戶問：『OMEGA屬於哪個集團？』\nA. Swatch Group  B. LVMH", a:"A"},
-  {q:"客戶問：『Diver 300M 2018年改了什麼？』\nA. 升級8800機芯+陶瓷圈  B. 換成石英", a:"A"},
-  {q:"客戶問：『超霸有自動上鏈嗎？』\nA. 有，但專業款是手動  B. 沒有，全是石英", a:"A"},
-  {q:"客戶問：『星座有潛水款嗎？』\nA. 沒有，主打正裝  B. 有，300米", a:"A"},
-  {q:"客戶問：『碟飛有計時碼表嗎？』\nA. 少數有，但不主打  B. 沒有，完全沒有", a:"B"},
-  {q:"客戶問：『OMEGA保養要幾年一次？』\nA. 5-8年  B. 每年一次", a:"A"},
-  {q:"客戶問：『為什麼超霸按鈕在2點和4點？』\nA. 非對稱殼保護按鈕  B. 隨機設計", a:"A"},
-  {q:"客戶問：『Aqua Terra面盤為何有柚木紋？』\nA. 靈感來自遊艇甲板  B. 隨機裝飾", a:"A"},
-  {q:"客戶問：『Planet Ocean有女款嗎？』\nA. 有，39.5mm  B. 沒有，全是大錶", a:"A"},
-  {q:"客戶問：『超霸陶瓷款叫什麼？』\nA. Dark Side of the Moon  B. White Side", a:"A"},
-  {q:"客戶問：『OMEGA值得信賴嗎？』\nA. 值得，歷史+科技雙冠軍  B. 一般，僅外觀", a:"A"},
-  {q:"客戶問：『Diver 300M 藍色陶瓷面盤最受歡迎？』\nA. 是  B. 否", a:"A"},
-  {q:"客戶問：『Aqua Terra 綠色面盤近年流行？』\nA. 是  B. 否", a:"A"},
-  {q:"客戶問：『超霸 Moonshine™ Gold 色澤？』\nA. 淡雅  B. 鮮豔", a:"A"},
-  {q:"客戶問：『星座有鑽石款嗎？』\nA. 有  B. 無", a:"A"},
-  {q:"客戶問：『碟飛有月相嗎？』\nA. 有  B. 無", a:"A"},
-  {q:"客戶問：『OMEGA 抗磁技術領先業界？』\nA. 是  B. 否", a:"A"},
-  {q:"客戶問：『超霸有GMT功能？』\nA. 有  B. 無", a:"A"},
-  {q:"客戶問：『海馬有正裝款？』\nA. 有  B. 無", a:"A"},
-  {q:"客戶問：『星座有測速圈？』\nA. 無  B. 有", a:"A"},
-  {q:"客戶問：『碟飛有排氦閥？』\nA. 無  B. 有", a:"A"},
-  {q:"客戶問：『Co-Axial 提升精準度？』\nA. 是  B. 否", a:"A"},
-  {q:"客戶問：『METAS 測試包含磁場模擬？』\nA. 是  B. 否", a:"A"},
-  {q:"客戶問：『Aqua Terra 41mm 適合商務？』\nA. 是  B. 否", a:"A"},
-  {q:"客戶問：『超霸38mm 卡布奇諾款溫暖？』\nA. 是  B. 否", a:"A"},
-  {q:"最後一題：你最推薦客戶的第一支OMEGA？\nA. Aqua Terra（全能日常）  B. 鐵霸（已停產）", a:"A"}
+  // 第四部分：銷售話術實戰（40題）—— A:19 B:21
+  {q:"客戶問：『為什麼要買OMEGA？』\nA. 只是瑞士錶  B. 登月+奧運+抗磁", a:"B"},
+  {q:"客戶問：『超霸為何叫月球錶？』\nA. 面盤像月球  B. 唯一登月認證", a:"B"},
+  {q:"客戶問：『海馬可以每天戴嗎？』\nA. 不行，只適合潛水  B. 可以，Aqua Terra 150米", a:"B"},
+  {q:"客戶問：『星座適合送禮嗎？』\nA. 不適合，太運動  B. 適合，托爪設計經典", a:"B"},
+  {q:"客戶問：『碟飛跟星座差在哪？』\nA. 碟飛更防水  B. 碟飛更簡約正裝", a:"B"},
+  {q:"客戶問：『OMEGA抗磁強嗎？』\nA. 一般，1,000高斯  B. 強，15,000高斯", a:"B"},
+  {q:"客戶問：『為什麼保養週期長？』\nA. 機芯更大  B. Co-Axial減少摩擦", a:"B"},
+  {q:"客戶問：『Diver 300M為何有排氦閥？』\nA. 裝飾用  B. 專業飽和潛水", a:"B"},
+  {q:"客戶問：『Aqua Terra可以游泳嗎？』\nA. 不行，只適合洗手  B. 可以，150米防水", a:"B"},
+  {q:"客戶問：『超霸可以戴去潛水嗎？』\nA. 可以，300米  B. 不建議，只50米", a:"B"},
+  {q:"客戶問：『陶瓷錶圈會刮傷嗎？』\nA. 很容易  B. 幾乎不會", a:"B"},
+  {q:"客戶問：『Sedna金會褪色嗎？』\nA. 會，需鍍層  B. 不會，含鈀穩定色澤", a:"B"},
+  {q:"客戶問：『為什麼Globemaster叫鬆餅紋？』\nA. 機芯像鬆餅  B. 面盤紋路像鬆餅", a:"B"},
+  {q:"客戶問：『OMEGA是哪國品牌？』\nA. 德國  B. 瑞士", a:"B"},
+  {q:"客戶問：『OMEGA屬於哪個集團？』\nA. LVMH  B. Swatch Group", a:"B"},
+  {q:"客戶問：『Diver 300M 2018年改了什麼？』\nA. 換成石英  B. 升級8800機芯+陶瓷圈", a:"B"},
+  {q:"客戶問：『超霸有自動上鏈嗎？』\nA. 沒有，全是石英  B. 有，但專業款是手動", a:"B"},
+  {q:"客戶問：『星座有潛水款嗎？』\nA. 有，300米  B. 沒有，主打正裝", a:"B"},
+  {q:"客戶問：『碟飛有計時碼表嗎？』\nA. 沒有，完全沒有  B. 少數有，但不主打", a:"A"},
+  {q:"客戶問：『OMEGA保養要幾年一次？』\nA. 每年一次  B. 5-8年", a:"B"},
+  {q:"客戶問：『為什麼超霸按鈕在2點和4點？』\nA. 隨機設計  B. 非對稱殼保護按鈕", a:"B"},
+  {q:"客戶問：『Aqua Terra面盤為何有柚木紋？』\nA. 隨機裝飾  B. 靈感來自遊艇甲板", a:"B"},
+  {q:"客戶問：『Planet Ocean有女款嗎？』\nA. 沒有，全是大錶  B. 有，39.5mm", a:"B"},
+  {q:"客戶問：『超霸陶瓷款叫什麼？』\nA. White Side  B. Dark Side of the Moon", a:"B"},
+  {q:"客戶問：『OMEGA值得信賴嗎？』\nA. 一般，僅外觀  B. 值得，歷史+科技雙冠軍", a:"B"},
+  {q:"客戶問：『Diver 300M 藍色陶瓷面盤最受歡迎？』\nA. 否  B. 是", a:"B"},
+  {q:"客戶問：『Aqua Terra 綠色面盤近年流行？』\nA. 否  B. 是", a:"B"},
+  {q:"客戶問：『超霸 Moonshine™ Gold 色澤？』\nA. 鮮豔  B. 淡雅", a:"B"},
+  {q:"客戶問：『星座有鑽石款嗎？』\nA. 無  B. 有", a:"B"},
+  {q:"客戶問：『碟飛有月相嗎？』\nA. 無  B. 有", a:"B"},
+  {q:"客戶問：『OMEGA 抗磁技術領先業界？』\nA. 否  B. 是", a:"B"},
+  {q:"客戶問：『超霸有GMT功能？』\nA. 無  B. 有", a:"B"},
+  {q:"客戶問：『海馬有正裝款？』\nA. 無  B. 有", a:"B"},
+  {q:"客戶問：『星座有測速圈？』\nA. 有  B. 無", a:"B"},
+  {q:"客戶問：『碟飛有排氦閥？』\nA. 有  B. 無", a:"B"},
+  {q:"客戶問：『Co-Axial 提升精準度？』\nA. 否  B. 是", a:"B"},
+  {q:"客戶問：『METAS 測試包含磁場模擬？』\nA. 否  B. 是", a:"B"},
+  {q:"客戶問：『Aqua Terra 41mm 適合商務？』\nA. 否  B. 是", a:"B"},
+  {q:"客戶問：『超霸38mm 卡布奇諾款溫暖？』\nA. 否  B. 是", a:"B"},
+  {q:"最後一題：你最推薦客戶的第一支OMEGA？\nA. 鐵霸（已停產）  B. Aqua Terra（全能日常）", a:"B"}
 ];
 
 // ---------- 狀態 ----------
@@ -419,4 +449,5 @@ initializeGame();
 </script>
 </body>
 </html>
+
 
