Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   // 第一部分：OMEGA 歷史與傳奇（35題）—— A:18 B:17
   {q:"OMEGA 創立於哪一年？\nA. 1894年  B. 1848年", a:"B"},
   {q:"OMEGA 創辦人是誰？\nA. George Daniels  B. Louis Brandt", a:"B"},
-  {q:"OMEGA 品牌名稱來自哪個希臘字母？\nA. Alpha  B. Omega", a:"B"},
+  {q:"OMEGA 品牌名稱來自哪個希臘字母？\nA. β  B. Ω", a:"B"},
   {q:"OMEGA 最早以什麼聞名？\nA. 潛水錶  B. 精準懷錶機芯", a:"B"},
   {q:"19世紀末，OMEGA 推出哪款傳奇機芯？\nA. 8800機芯  B. 19令機芯", a:"B"},
   {q:"1932年，OMEGA 首次成為哪項賽事官方計時？\nA. F1  B. 奧運", a:"B"},
@@ -198,7 +198,7 @@
   {q:"OMEGA 抗磁領先業界？\nA. 否  B. 是", a:"B"},
 
   // 第四部分：銷售話術實戰（40題）—— A:19 B:21
-  {q:"客戶問：『為什麼要買OMEGA？』\nA. 只是瑞士錶  B. 登月+奧運+抗磁", a:"B"},
+  {q:"客戶問：『為什麼要買OMEGA？』\nA. 瑞士錶第一品牌  B. 登月+奧運+抗磁", a:"B"},
   {q:"客戶問：『超霸為何叫月球錶？』\nA. 面盤像月球  B. 唯一登月認證", a:"B"},
   {q:"客戶問：『海馬可以每天戴嗎？』\nA. 不行，只適合潛水  B. 可以，Aqua Terra 150米", a:"B"},
   {q:"客戶問：『星座適合送禮嗎？』\nA. 不適合，太運動  B. 適合，托爪設計經典", a:"B"},
@@ -236,8 +236,8 @@
   {q:"客戶問：『Co-Axial 提升精準度？』\nA. 否  B. 是", a:"B"},
   {q:"客戶問：『METAS 測試包含磁場模擬？』\nA. 否  B. 是", a:"B"},
   {q:"客戶問：『Aqua Terra 41mm 適合商務？』\nA. 否  B. 是", a:"B"},
-  {q:"客戶問：『超霸38mm 卡布奇諾款溫暖？』\nA. 否  B. 是", a:"B"},
-  {q:"最後一題：你最推薦客戶的第一支OMEGA？\nA. 鐵霸（已停產）  B. Aqua Terra（全能日常）", a:"B"}
+  {q:"客戶問：『超霸38mm 是否大多以女性為主客群？』\nA. 否  B. 是", a:"B"},
+  {q:"客戶問：你最推薦客戶的第一支OMEGA？\nA. 鐵霸（已停產）  B. Aqua Terra（全能日常）", a:"B"}
 ];
 
 // ---------- 狀態 ----------
@@ -449,5 +449,6 @@ initializeGame();
 </script>
 </body>
 </html>
+
 
 
